cert-manager/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-test
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: acme-prod
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: app-test
          servicePort: 8888
  tls:
  - hosts:
    - test.greatdnd.world
